{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 105,
  "lineage": "13983b47-43f9-3702-dc16-aba96089c003",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "forNat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08355707d2f2105c5",
            "public_dns": "ec2-3-14-2-176.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.2.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-ea87a78f",
            "arn": "arn:aws:ec2:us-east-2:906051581288:instance/i-0f74f785a71e5b7a2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f74f785a71e5b7a2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mitko2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d1eb8d8602b5c22",
            "private_dns": "ip-172-28-3-38.us-east-2.compute.internal",
            "private_ip": "172.28.3.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e2bf2882242e2823",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070aa19849a514423",
            "tags": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01f343091283ab8f5"
            ]
          },
          "dependencies": [
            "aws_security_group.Database",
            "aws_security_group.FrontEnd",
            "aws_subnet.PrivateAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "phpapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-ea87a78f",
            "arn": "arn:aws:ec2:us-east-2:906051581288:instance/i-0e48f1b09ec46a209",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e48f1b09ec46a209",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mitko2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09117c66d5552ec43",
            "private_dns": "ip-172-28-0-126.us-east-2.compute.internal",
            "private_ip": "172.28.0.126",
            "public_dns": "ec2-3-135-189-135.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.189.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-078102aab277f0c37",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0311dca2609888127",
            "tags": {
              "Name": "phpapp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e14bb873556808f7"
            ]
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c0f848bc6af3566b",
            "owner_id": "906051581288",
            "tags": {
              "Name": "internet gw terraform generated"
            },
            "vpc_id": "vpc-05792f7a9a2a961e1"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08355707d2f2105c5",
            "id": "nat-0111a5d4293cd84ba",
            "network_interface_id": "eni-03963a6ba958884ed",
            "private_ip": "172.28.0.225",
            "public_ip": "3.14.2.176",
            "subnet_id": "subnet-0311dca2609888127"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              }
            ],
            "id": "acl-0bceeb9b9a695c8f5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "906051581288",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "open acl"
            },
            "vpc_id": "vpc-05792f7a9a2a961e1"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04454232d23dfd271",
            "owner_id": "906051581288",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0111a5d4293cd84ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-05792f7a9a2a961e1"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.PublicAZA",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02142447f149446a3",
            "owner_id": "906051581288",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0f848bc6af3566b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-05792f7a9a2a961e1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbebd5a91a78185c",
            "route_table_id": "rtb-04454232d23dfd271",
            "subnet_id": "subnet-070aa19849a514423"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.PublicAZA",
            "aws_route_table.private",
            "aws_subnet.PrivateAZA",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cee9bb23482c12b",
            "route_table_id": "rtb-02142447f149446a3",
            "subnet_id": "subnet-0311dca2609888127"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:906051581288:security-group/sg-01f343091283ab8f5",
            "description": "ONLY tcp CONNECTION INBOUND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f343091283ab8f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e14bb873556808f7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database",
            "name_prefix": null,
            "owner_id": "906051581288",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-05792f7a9a2a961e1"
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "FrontEnd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:906051581288:security-group/sg-0e14bb873556808f7",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e14bb873556808f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "FrontEnd",
            "name_prefix": null,
            "owner_id": "906051581288",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FrontEnd"
            },
            "timeouts": null,
            "vpc_id": "vpc-05792f7a9a2a961e1"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:906051581288:subnet/subnet-070aa19849a514423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.28.3.0/24",
            "id": "subnet-070aa19849a514423",
            "map_public_ip_on_launch": false,
            "owner_id": "906051581288",
            "tags": {
              "Name": "PublicAZB"
            },
            "vpc_id": "vpc-05792f7a9a2a961e1"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:906051581288:subnet/subnet-0311dca2609888127",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.28.0.0/24",
            "id": "subnet-0311dca2609888127",
            "map_public_ip_on_launch": false,
            "owner_id": "906051581288",
            "tags": {
              "Name": "PublicAZA"
            },
            "vpc_id": "vpc-05792f7a9a2a961e1"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraformmain",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:906051581288:vpc/vpc-05792f7a9a2a961e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.28.0.0/16",
            "default_network_acl_id": "acl-0227d56f5af098f7b",
            "default_route_table_id": "rtb-0c17a9fe1aeb59888",
            "default_security_group_id": "sg-0b6c6bb592ba5e6f4",
            "dhcp_options_id": "dopt-dd5c0cb4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05792f7a9a2a961e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c17a9fe1aeb59888",
            "owner_id": "906051581288",
            "tags": {
              "Name": "My terraform vpc"
            }
          }
        }
      ]
    }
  ]
}